syntax = "proto3";

package karavi;
option go_package = "github.com/dell/karavi-authorization/pb";

message CreateRequest {
  string name = 1;
  string storageType = 2;
  string systemId = 3;
  string quota = 4;
}

message CreateResponse {}

service RoleService {
  rpc Create(CreateRequest) returns (CreateResponse) {};
}
